--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
     "build": "tsc && vite build",
     "build:inline": "npx tsx build-inline.ts",
     "analyze:deadcode": "knip --reporter json",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --ext .ts,.tsx",
-    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --ext .ts,.tsx --fix",
+    "lint": "eslint --config .eslintrc.cjs \"src/**/*.{ts,tsx}\" --ext .ts,.tsx",
+    "lint:fix": "eslint --config .eslintrc.cjs \"src/**/*.{ts,tsx}\" --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md,json}\"",
     "typecheck": "tsc --noEmit",
     "depcheck": "depcheck --json",
     "ts-prune": "ts-prune --project tsconfig.json --exclude \"src/**/*.d.ts\"",
     "analyze:bundle": "vite build --mode production",
-    "preview": "vite preview --host --port 80"
+    "test": "vitest",
+    "preview": "vite preview --host --port 80",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,css,json,md}": [
+      "npm run lint:fix",
+      "npm run format"
+    ]
   },
   "dependencies": {
     "dompurify": "^3.3.1",
@@ -26,13 +34,29 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^24.0.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "@vitejs/plugin-react": "^4.6.0",
+    "depcheck": "^1.4.7",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-unused-imports": "^4.4.1",
+    "husky": "^9.1.7",
     "knip": "^5.76.3",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.8.1",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "ts-prune": "^0.10.3",
     "tsx": "^4.20.5",
     "typescript": "^5.5.0",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vitest": "^4.0.18"
   }
 }
