chore: add linting tooling, husky pre-commit and apply formatting; fix useTheme eslint comments

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "tsc && vite build",
     "build:inline": "npx tsx build-inline.ts",
     "analyze:deadcode": "knip --reporter json",
-    "lint": "eslint --config .eslintrc.cjs \"src/**/*.{ts,tsx}\" --ext .ts,.tsx",
-    "lint:fix": "eslint --config .eslintrc.cjs \"src/**/*.{ts,tsx}\" --ext .ts,.tsx --fix",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --ext .ts,.tsx",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md,json}\"",
     "typecheck": "tsc --noEmit",
     "depcheck": "depcheck --json",
