--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-unused-imports": "^4.4.1",
     "husky": "^9.1.7",
+    "jsdom": "^28.0.0",
     "knip": "^5.76.3",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
