--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src", "src/**/*.test.ts", "src/**/*.test.tsx", "src/**/__tests__/**/*"],
+  "include": ["src", "src/**/*.test.ts", "src/**/*.test.tsx", "src/**/__tests__/*", "src/**/__tests__/**/*"],
   "exclude": []
 }
