refactor: restructure project architecture following feature-first pattern
BREAKING CHANGES in imports:
- Moved src/constants/* → src/core/constants/
- Moved src/utils/* → src/core/utils/
- Moved src/shared/types/* → src/core/types/
- Reorganized src/features/:
  * vpn/model/ → vpn/domain/ + vpn/context/
  * features/vpn/components/ → features/vpn/ui/components/
  * pages/* → features/*/ui/screens/

New structure:
├── core/          (infrastructure: types, constants, utils)
├── features/      (feature-first pattern)
│   ├── vpn/
│   ├── news/
│   ├── logs/
│   ├── account/
│   └── terms/
├── shared/        (transversal code)
└── i18n/          (internationalization)

All imports now use:
- @/core/* for infrastructure
- @/features/* for features
- @/shared/* for shared code
- @/i18n/* for i18n

Benefits:
- Clear separation of concerns
- Scalable feature ownership
- Reduced interdependencies
- Better code discoverability
- Prepared for future growth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,18 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/app/*": ["./src/app/*"],
-      "@/pages/*": ["./src/pages/*"],
+      "@/core/*": ["./src/core/*"],
+      "@/core/types/*": ["./src/core/types/*"],
+      "@/core/utils/*": ["./src/core/utils/*"],
+      "@/core/constants/*": ["./src/core/constants/*"],
       "@/shared/*": ["./src/shared/*"],
       "@/features/*": ["./src/features/*"],
-      "@/utils/*": ["./src/utils/*"],
-      "@/types/*": ["./src/shared/types/*"],
-      "@/constants/*": ["./src/constants/*"]
+      "@/features/vpn/*": ["./src/features/vpn/*"],
+      "@/features/news/*": ["./src/features/news/*"],
+      "@/features/logs/*": ["./src/features/logs/*"],
+      "@/features/account/*": ["./src/features/account/*"],
+      "@/features/terms/*": ["./src/features/terms/*"],
+      "@/i18n/*": ["./src/i18n/*"]
     }
   },
   "include": ["src"],
