feat: implement centralized error handler with async error management
- Created ErrorHandler utility with error classification system
  - Custom AppError class with severity levels and categorization
  - 10 error categories (Validation, Network, Authentication, etc.)
  - Error configuration with user-friendly messages
  - Error logging with context and timestamps

- Implemented error state management hooks
  - useAsyncError: Basic error state and actions (setError, clearError)
  - useAsyncErrorWithRetry: Advanced hook with exponential backoff retry logic
  - Async operation error handling wrapper

- Created reusable error display components
  - ErrorDisplay: Main error box with dismiss/retry buttons
  - ErrorMessage: Inline error text with icon
  - ErrorToast: Auto-closing error notification
  - Accessibility features (role="alert", aria-live)

- Integrated error handling into 3 main screens
  - ServersScreen: Error handling for server selection
  - ImportConfigScreen: Error handling for config import/apply
  - HomeScreen: Error handling for connection and updates

- Updated barrel exports for better API organization
- Installed terser as dev dependency for build optimization

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "knip": "^5.76.3",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
+    "terser": "^5.46.0",
     "ts-prune": "^0.10.3",
     "tsx": "^4.20.5",
     "typescript": "^5.5.0",
